# whaleforce-AI-coding-workshop-demo

./: .gitignore  CLAUDE.md  REQUEST.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-developer.md  frontend-developer.md  testing-developer.md  todo-planner.md
