[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.25",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
]
